--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_50">#E8DFE7</color>
+    <color name="purple_50">#EDDFEC</color>
     <color name="purple_200">#ECAEE3</color>
     <color name="purple_500">#DC89D0</color>
     <color name="purple_700">#A8579D</color>
