--- a/app/src/main/res/layout/note_row.xml
+++ b/app/src/main/res/layout/note_row.xml
@@ -17,24 +17,50 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_noteCardTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/purple_500"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="TextView"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_noteCardTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="TextView"
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
+
+                <ImageButton
+                    android:id="@+id/imgBtn_noteCardEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_round_edit_24"
+                    app:tint="@color/white" />
+
+                <ImageButton
+                    android:id="@+id/imgBtn_noteCardDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_round_delete_24"
+                    app:tint="@color/white" />
+
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_noteCardnote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/purple_50"
                 android:gravity="center"
                 android:padding="20dp"
-                android:background="@color/purple_50"
                 android:text="TextView"
                 android:textColor="#938B92"
                 android:textSize="20dp" />
